--- a/css/styles/styles.css
+++ b/css/styles/styles.css
@@ -1,17 +1,10 @@
-html, body {
-  background-color: #fff;
-}
+html, body {background-color: #fff;}
 
-body {
-  margin: 0;
-  margin-bottom: 200px;
-}
+body {margin-bottom: 200px;}
 
 footer {
   width: 100%;
   height: 200px;
-  position: fixed;
-  bottom: 0;
   z-index: -1;
   background-color: #377be0;
 }
