--- a/css/styles/styles.css
+++ b/css/styles/styles.css
@@ -1,10 +1,23 @@
-html, body {background-color: #fff;}
+html,
+body {
+  background-color: #fff;
+}
 
-body {margin-bottom: 150px;}
+body {
+  margin-bottom: 150px;
+}
 
 footer {
   width: 100%;
   height: 150px;
   z-index: -1;
   background-color: #377be0;
+}
+
+#a-home,
+#a-forecast,
+#a-documentation,
+#a-api,
+#a-about {
+  cursor: pointer;
 }
