--- a/views/about.html
+++ b/views/about.html
@@ -1,118 +1,7 @@
 <!DOCTYPE html>
 
-<p class="text-center">Ceci est un test, je suis la view "about.html"</p>
-<p class="text-justify">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo obcaecati maxime
-    delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
-    blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
-    ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
-    minima provident! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo
-    obcaecati maxime
-    delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
-    blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
-    ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
-    minima provident! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo
-    obcaecati maxime
-    delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
-    blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
-    ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
-    minima provident!
-</p>
-<img src="https://c4.wallpaperflare.com/wallpaper/500/442/354/outrun-vaporwave-hd-wallpaper-thumb.jpg" alt="montagne" style="width: 300px;">
-<p class="text-justify">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo obcaecati maxime
-    delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
-    blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
-    ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
-    minima provident! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo
-    obcaecati maxime
-    delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
-    blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
-    ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
-    minima provident! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo
-    obcaecati maxime
-    delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
-    blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
-    ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
-    minima provident!
-</p>
-<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo obcaecati maxime
-    delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
-    blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
-    ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
-    minima provident! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo
-    obcaecati maxime
-    delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
-    blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
-    ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
-    minima provident! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo
-    obcaecati maxime
-    delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
-    blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
-    ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
-    minima provident!
-</p>
-<img src="https://c4.wallpaperflare.com/wallpaper/500/442/354/outrun-vaporwave-hd-wallpaper-thumb.jpg" alt="montagne" style="width: 300px;">
-<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo obcaecati maxime
-    delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
-    blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
-    ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
-    minima provident! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo
-    obcaecati maxime
-    delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
-    blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
-    ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
-    minima provident! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo
-    obcaecati maxime
-    delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
-    blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
-    ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
-    minima provident!
-</p>
-<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo obcaecati maxime
-    delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
-    blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
-    ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
-    minima provident! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo
-    obcaecati maxime
-    delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
-    blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
-    ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
-    minima provident! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo
-    obcaecati maxime
-    delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
-    blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
-    ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
-    minima provident!
-</p>
-<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo obcaecati maxime
-    delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
-    blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
-    ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
-    minima provident! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo
-    obcaecati maxime
-    delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
-    blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
-    ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
-    minima provident! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo
-    obcaecati maxime
-    delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
-    blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
-    ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
-    minima provident!
-</p>
-<img src="https://c4.wallpaperflare.com/wallpaper/500/442/354/outrun-vaporwave-hd-wallpaper-thumb.jpg" alt="montagne" style="width: 300px;">
-<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo obcaecati maxime
-    delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
-    blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
-    ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
-    minima provident! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo
-    obcaecati maxime
-    delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
-    blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
-    ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
-    minima provident! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo
-    obcaecati maxime
-    delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
-    blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
-    ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
-    minima provident!
-</p>
+<div class="container mt-3">
+    <p class="h1 mb-3">À propos</p>
+
+    <p>Text here</p>
+</div>
