--- a/css/styles/styles.css
+++ b/css/styles/styles.css
@@ -21,3 +21,74 @@ footer {
 #a-about {
   cursor: pointer;
 }
+
+.move {
+  animation: moves 1s linear;
+}
+
+@keyframes moves {
+  0% {
+    transform: translateX(-1000px);
+    opacity: 0.2;
+  }
+  10% {
+    transform: translateX(-500px);
+    opacity: 0.2;
+  }
+  20% {
+    transform: translateX(-300px);
+    opacity: 0.3;
+  }
+  30% {
+    transform: translateX(-200px);
+    opacity: 0.4;
+  }
+  40% {
+    transform: translateX(-100px);
+    opacity: 0.5;
+  }
+  50% {
+    transform: translateX(-80px);
+    opacity: 0.6;
+  }
+  60% {
+    transform: translateX(-70px);
+    opacity: 0.8;
+  }
+  65% {
+    transform: translateX(-60px);
+    opacity: 0.9;
+  }
+  70% {
+    transform: translateX(-50px);
+    opacity: 1;
+  }
+  75% {
+    transform: translateX(-40px);
+    opacity: 0.3;
+  }
+  80% {
+    transform: translateX(-35px);
+    opacity: 0.4;
+  }
+  85% {
+    transform: translateX(-30px);
+    opacity: 0.5;
+  }
+  90% {
+    transform: translateX(-20px);
+    opacity: 0.6;
+  }
+  93% {
+    transform: translateX(-10px);
+    opacity: 0.8;
+  }
+  97% {
+    transform: translateX(-5px);
+    opacity: 0.9;
+  }
+  100% {
+    transform: translateX(0px);
+    opacity: 1;
+  }
+}
