--- a/views/about.html
+++ b/views/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <div class="container mt-3">
-    <p class="h1 mb-3">À propos</p>
+    <p class="h1 mb-3" id="title">À propos</p>
 
-    <p id="test1">Text here</p>
+    <p>Text here</p>
 </div>
