--- a/views/doc.html
+++ b/views/doc.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<p class="text-center">Ceci est un test, je suis la view "documentation.html"</p>
+<p class="text-center">Ceci est un test, je suis la view "doc.html"</p>
 <p class="text-justify">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo obcaecati maxime
     delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
     blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
