--- a/views/footer.html
+++ b/views/footer.html
@@ -1,3 +1,9 @@
+<!-- 
+   But     : Footer view
+   Auteur  : Noé Henchoz
+   Date    : 26.05.2022 / v1.0 
+-->
+
 <!DOCTYPE html>
 
 <div class="container p-4 pb-0">
