--- a/views/about.html
+++ b/views/about.html
@@ -1,3 +1,9 @@
+<!-- 
+   But     : About view
+   Auteur  : Noé Henchoz
+   Date    : 26.05.2022 / v1.0 
+-->
+
 <!DOCTYPE html>
 
 <div class="container mt-3">
