--- a/views/doc.html
+++ b/views/doc.html
@@ -1,3 +1,9 @@
+<!-- 
+   But     : Doc view
+   Auteur  : Noé Henchoz
+   Date    : 26.05.2022 / v1.0 
+-->
+
 <!DOCTYPE html>
 
 <p class="text-center">Ceci est un test, je suis la view "doc.html"</p>
