--- a/views/home.html
+++ b/views/home.html
@@ -1,3 +1,9 @@
+<!-- 
+   But     : Main view  
+   Auteur  : Noé Henchoz
+   Date    : 26.05.2022 / v1.0 
+-->
+
 <!DOCTYPE html>
 
 <p class="text-center">Ceci est un test, je suis la view "home.html"</p>
