--- a/css/styles/styles.css
+++ b/css/styles/styles.css
@@ -1,5 +1,5 @@
 /*
-  But     : Fichier de styles principal
+  But     : Main CSS file
   Auteur  : Noé Henchoz 300221
   Date    : 25.05.2022 / v1.0 
 */
