--- a/css/styles/styles.css
+++ b/css/styles/styles.css
@@ -4,27 +4,26 @@
   Date    : 25.05.2022 / v1.0 
 */
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
 html,
 body {
-  background-color: #A0AECD;
+  background-color: #fff;
 }
 
 .navbar {
-  background-color: #A0AECD!important;
+  background-color: #FAC05E!important;
   border-bottom: 1px solid #000000;
 }
 
 body {
   margin-bottom: 150px;
+  background-color: rgb(191, 149, 247);
 }
 
 footer {
   width: 100%;
   height: 150px;
   z-index: -1;
-  background-color: #377be0;
+  background-color: #FAC05E;
 }
 
 #a-home,
