--- a/views/api.html
+++ b/views/api.html
@@ -21,10 +21,7 @@
     delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
     blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
     ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
-    minima provident!
-</p>
-<img src="https://c4.wallpaperflare.com/wallpaper/500/442/354/outrun-vaporwave-hd-wallpaper-thumb.jpg" alt="montagne" style="width: 300px;">
-<p class="text-justify">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo obcaecati maxime
+    minima provident!Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo obcaecati maxime
     delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
     blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
     ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
@@ -38,9 +35,7 @@
     delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
     blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
     ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
-    minima provident!
-</p>
-<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo obcaecati maxime
+    minima provident!Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo obcaecati maxime
     delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
     blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
     ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
@@ -54,10 +49,7 @@
     delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
     blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
     ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
-    minima provident!
-</p>
-<img src="https://c4.wallpaperflare.com/wallpaper/500/442/354/outrun-vaporwave-hd-wallpaper-thumb.jpg" alt="montagne" style="width: 300px;">
-<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo obcaecati maxime
+    minima provident!Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo obcaecati maxime
     delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
     blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
     ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
@@ -71,9 +63,7 @@
     delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
     blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
     ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
-    minima provident!
-</p>
-<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo obcaecati maxime
+    minima provident!Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo obcaecati maxime
     delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
     blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
     ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
@@ -87,9 +77,7 @@
     delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
     blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
     ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
-    minima provident!
-</p>
-<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo obcaecati maxime
+    minima provident!Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo obcaecati maxime
     delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
     blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
     ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
@@ -103,10 +91,63 @@
     delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
     blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
     ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
-    minima provident!
-</p>
-<img src="https://c4.wallpaperflare.com/wallpaper/500/442/354/outrun-vaporwave-hd-wallpaper-thumb.jpg" alt="montagne" style="width: 300px;">
-<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo obcaecati maxime
+    minima provident!Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo obcaecati maxime
+    delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
+    blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
+    ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
+    minima provident! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo
+    obcaecati maxime
+    delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
+    blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
+    ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
+    minima provident! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo
+    obcaecati maxime
+    delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
+    blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
+    ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
+    minima provident!Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo obcaecati maxime
+    delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
+    blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
+    ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
+    minima provident! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo
+    obcaecati maxime
+    delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
+    blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
+    ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
+    minima provident! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo
+    obcaecati maxime
+    delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
+    blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
+    ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
+    minima provident!Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo obcaecati maxime
+    delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
+    blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
+    ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
+    minima provident! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo
+    obcaecati maxime
+    delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
+    blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
+    ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
+    minima provident! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo
+    obcaecati maxime
+    delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
+    blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
+    ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
+    minima provident!Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo obcaecati maxime
+    delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
+    blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
+    ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
+    minima provident! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo
+    obcaecati maxime
+    delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
+    blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
+    ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
+    minima provident! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo
+    obcaecati maxime
+    delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
+    blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
+    ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
+    minima provident!Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur officia aut dolores nemo obcaecati maxime
     delectus recusandae doloremque. Facilis aperiam inventore repudiandae? Doloribus optio quo eum, animi unde
     blanditiis illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio sunt delectus alias obcaecati
     ipsam laboriosam natus repellat modi eum ullam voluptate rem quod repellendus voluptatem odio, officiis tempore
