--- a/views/footer.html
+++ b/views/footer.html
@@ -17,9 +17,11 @@
                 class="fab fa-instagram"></i></a>
         <a class="btn btn-light m-1" style="background-color: #333333; color: white;" href="https://github.com/ARATY7"
             role="button" target="_blank"><i class="fab fa-github"></i></a>
+        <a class="btn btn-light m-1" style="background-color: #52B58A; color: white;" href="mailto:nhenchoz122@icloud.com"
+            role="button"><i class="fa-solid fa-envelope"></i></a>
     </section>
 </div>
 
 <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-    &#169; 2022 - <a class="text-white text-decoration-none" href="mailto:noe.henchoz@studentfr.ch">Noé Henchoz</a>
+    &#169; 2022 - <a class="text-white text-decoration-none" href="mailto:nhenchoz122@icloud.com">Noé Henchoz</a>
 </div>
