--- a/css/styles/styles.css
+++ b/css/styles/styles.css
@@ -49,3 +49,19 @@ footer {
     transform: translateX(0);
   }
 }
+
+.nav-link::after {
+  content: '';
+    display: block;
+    width: 0;
+    height: 2px;
+    background: #000;
+    transition: width .3s;
+}
+.nav-link:hover::after {
+  width: 100%;
+}
+
+.active::after {
+  width: 100%;
+}
