--- a/views/home.html
+++ b/views/home.html
@@ -8,7 +8,9 @@
 
 <div class="row">
     <div class="col-lg-3 col-md-6 col-sm-12 station">
-        Station 1
+        <p id="api-text">Station 1</p>
+        <input id="api-input" name="input">
+        <button class="btn btn-primary" id="api-btn" onclick="indexCtrl.find();">Trouver</button>
     </div>
     <div class="col-lg-3 col-md-6 col-sm-12 station">
         Station 2
