--- a/css/styles/styles.css
+++ b/css/styles/styles.css
@@ -10,7 +10,7 @@ body {
 }
 
 .navbar {
-  background-color: #FAC05E!important;
+  background-color: #fac05e !important;
   border-bottom: 1px solid #000000;
 }
 
@@ -23,7 +23,7 @@ footer {
   width: 100%;
   height: 150px;
   z-index: -1;
-  background-color: #FAC05E;
+  background-color: #fac05e;
 }
 
 #a-home,
@@ -51,12 +51,12 @@ footer {
 }
 
 .nav-link::after {
-  content: '';
-    display: block;
-    width: 0;
-    height: 2px;
-    background: #000;
-    transition: width .3s;
+  content: "";
+  display: block;
+  width: 0;
+  height: 2px;
+  background: #000;
+  transition: width 0.3s;
 }
 .nav-link:hover::after {
   width: 100%;
@@ -68,8 +68,8 @@ footer {
 
 .navbar-toggler:focus,
 .navbar-toggler:active {
-    outline: none;
-    box-shadow: none;
+  outline: none;
+  box-shadow: none;
 }
 
 .station {
