--- a/views/stations.html
+++ b/views/stations.html
@@ -1,6 +1,6 @@
 <!-- 
-   But     : Home view
-   Auteur  : Noé Henchoz'
+   But     : Station view
+   Auteur  : Noé Henchoz
    Date    : 26.05.2022 / v1.0 
 -->
 
