--- a/views/home.html
+++ b/views/home.html
@@ -1,6 +1,6 @@
 <!-- 
-   But     : Home view
-   Auteur  : Noé Henchoz'
+   But     : Main view
+   Auteur  : Noé Henchoz
    Date    : 26.05.2022 / v1.0 
 -->
 
