--- a/views/home.html
+++ b/views/home.html
@@ -7,5 +7,7 @@
 <!DOCTYPE html>
 
 <div class="container">
-    <p>Text here</p>
+    
+    <p class="display-3 ms-3 mt-3 title-view">Bienvenue sur météhenchoz&#160;!</p>
+
 </div>
