--- a/css/styles/styles.css
+++ b/css/styles/styles.css
@@ -9,20 +9,53 @@ body {
   background-color: #fff;
 }
 
-@font-face {
-  font-family: Noto;
-  src: url('../../fonts/NotoSans-Black.ttf');
+body {
+  margin-bottom: 150px;
+  background-image: linear-gradient( 95.2deg, rgba(173,252,234,1) 26.8%, rgba(192,229,246,1) 64% );
 }
 
+/* Imports fonts */
+@font-face {font-family: Noto;src: url('../../fonts/NotoSans-Black.ttf');}
+@font-face {font-family: Marker;src: url('../../fonts/PermanentMarker-Regular.ttf');}
+
+/* Navbar */
 .navbar {
   background-color: #fac05e !important;
   border-bottom: 1px solid #000000;
 }
 
-body {
-  margin-bottom: 150px;
+
+#a-home,
+#a-stations,
+#a-doc,
+#a-api,
+#a-about {cursor: pointer;}
+
+/* Links in navbar animation */
+.nav-link::after {content: "";display: block;width: 0;height: 2px;background: #000;transition: width 0.4s;}
+.nav-link:hover::after {width: 100%;}
+.active::after {width: 100%;}
+
+/* Remove outline on bootstrap toggle button */
+.navbar-toggler:focus,
+.navbar-toggler:active {outline: none;box-shadow: none;}
+
+.station {
+  height: 250px;
+  border: 1px solid black;
 }
 
+.title-view-anime {
+  animation: fromLeftWithBlur 1s;
+  font-weight: bold;
+  font-family: Marker;
+}
+
+.title-view-anime:hover {
+  animation: fromLeftWithBlur 1s;
+}
+
+/* footer */
 footer {
   width: 100%;
   height: 150px;
@@ -30,57 +63,32 @@ footer {
   background-color: #fac05e;
 }
 
-#a-home,
-#a-stations,
-#a-doc,
-#a-api,
-#a-about {
-  cursor: pointer;
-}
+/* Buttons footer */
+.btn-footer {transform: scale(1);transition: transform 0.2s ease-in-out;}
 
-.fromLeftTitle {
-  animation: leftToRight 0.8s linear;
-}
+.btn-footer:hover {transform: scale(1.1);transition: transform 0.2s ease-in-out;}
 
-@keyframes leftToRight {
+
+/* Keyframes animations */
+@keyframes fromLeftWithBlur {
   0% {
-    transform: translateX(-800px);
-  }
-  90% {
     transform: translateX(-50px);
+    opacity: 0;
   }
   100% {
-    transform: translateX(0);
+    transform: translateX(0px);
+    opacity: 1;
   }
 }
 
-.nav-link::after {
-  content: "";
-  display: block;
-  width: 0;
-  height: 2px;
-  background: #000;
-  transition: width 0.3s;
-}
-.nav-link:hover::after {
-  width: 100%;
-}
-
-.active::after {
-  width: 100%;
-}
-
-.navbar-toggler:focus,
-.navbar-toggler:active {
-  outline: none;
-  box-shadow: none;
-}
-
-.station {
-  height: 250px;
-  border: 1px solid black;
-}
-
-.title-view {
-  font-weight: bold;
+@keyframes toRight {
+  0% {
+    transform: translateX(0px);
+  }
+  50% {
+    transform: translateX(20px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
 }
