--- a/views/home.html
+++ b/views/home.html
@@ -7,7 +7,42 @@
 <!DOCTYPE html>
 
 <div class="container">
-    
-    <p class="display-3 ms-3 mt-3 title-view">Bienvenue sur météhenchoz&#160;!</p>
+
+    <p class="display-4 mt-3 title-view-anime">Bienvenue sur météhenchoz&#160;!</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ipsam tempore, esse, saepe repellendus obcaecati
+        aperiam laboriosam hic magnam commodi, totam eos! Eos ullam adipisci fugit optio nulla dolores placeat?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ipsam tempore, esse, saepe repellendus obcaecati
+        aperiam laboriosam hic magnam commodi, totam eos! Eos ullam adipisci fugit optio nulla dolores placeat?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ipsam tempore, esse, saepe repellendus obcaecati
+        aperiam laboriosam hic magnam commodi, totam eos! Eos ullam adipisci fugit optio nulla dolores placeat?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ipsam tempore, esse, saepe repellendus obcaecati
+        aperiam laboriosam hic magnam commodi, totam eos! Eos ullam adipisci fugit optio nulla dolores placeat?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ipsam tempore, esse, saepe repellendus obcaecati
+        aperiam laboriosam hic magnam commodi, totam eos! Eos ullam adipisci fugit optio nulla dolores placeat?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ipsam tempore, esse, saepe repellendus obcaecati
+        aperiam laboriosam hic magnam commodi, totam eos! Eos ullam adipisci fugit optio nulla dolores placeat?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ipsam tempore, esse, saepe repellendus obcaecati
+        aperiam laboriosam hic magnam commodi, totam eos! Eos ullam adipisci fugit optio nulla dolores placeat?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ipsam tempore, esse, saepe repellendus obcaecati
+        aperiam laboriosam hic magnam commodi, totam eos! Eos ullam adipisci fugit optio nulla dolores placeat?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ipsam tempore, esse, saepe repellendus obcaecati
+        aperiam laboriosam hic magnam commodi, totam eos! Eos ullam adipisci fugit optio nulla dolores placeat?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ipsam tempore, esse, saepe repellendus obcaecati
+        aperiam laboriosam hic magnam commodi, totam eos! Eos ullam adipisci fugit optio nulla dolores placeat?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ipsam tempore, esse, saepe repellendus obcaecati
+        aperiam laboriosam hic magnam commodi, totam eos! Eos ullam adipisci fugit optio nulla dolores placeat?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ipsam tempore, esse, saepe repellendus obcaecati
+        aperiam laboriosam hic magnam commodi, totam eos! Eos ullam adipisci fugit optio nulla dolores placeat?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ipsam tempore, esse, saepe repellendus obcaecati
+        aperiam laboriosam hic magnam commodi, totam eos! Eos ullam adipisci fugit optio nulla dolores placeat?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ipsam tempore, esse, saepe repellendus obcaecati
+        aperiam laboriosam hic magnam commodi, totam eos! Eos ullam adipisci fugit optio nulla dolores placeat?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ipsam tempore, esse, saepe repellendus obcaecati
+        aperiam laboriosam hic magnam commodi, totam eos! Eos ullam adipisci fugit optio nulla dolores placeat?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ipsam tempore, esse, saepe repellendus obcaecati
+        aperiam laboriosam hic magnam commodi, totam eos! Eos ullam adipisci fugit optio nulla dolores placeat?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ipsam tempore, esse, saepe repellendus obcaecati
+        aperiam laboriosam hic magnam commodi, totam eos! Eos ullam adipisci fugit optio nulla dolores placeat?</p>
 
 </div>
