--- a/views/footer.html
+++ b/views/footer.html
@@ -9,15 +9,15 @@
 <div class="container p-4 pb-0">
     <section class="mb-4">
         <!-- List of networks -->
-        <a class="btn btn-light m-1" style="background-color: #1DA1F2; color: white;"
+        <a class="btn btn-light m-1 btn-footer" style="background-color: #1DA1F2; color: white;"
             href="https://twitter.com/henchoznoe" role="button" target="_blank"><i class="fab fa-twitter"></i></a>
-        <a class="btn btn-light m-1"
+        <a class="btn btn-light m-1 btn-footer"
             style="background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%); color: white;"
             href="https://www.instagram.com/henchoznoe/" role="button" target="_blank"><i
                 class="fab fa-instagram"></i></a>
-        <a class="btn btn-light m-1" style="background-color: #333333; color: white;" href="https://github.com/ARATY7"
+        <a class="btn btn-light m-1 btn-footer" style="background-color: #333333; color: white;" href="https://github.com/ARATY7"
             role="button" target="_blank"><i class="fab fa-github"></i></a>
-        <a class="btn btn-light m-1" style="background-color: #52B58A; color: white;" href="mailto:nhenchoz122@icloud.com"
+        <a class="btn btn-light m-1 btn-footer" style="background-color: #52B58A; color: white;" href="mailto:nhenchoz122@icloud.com"
             role="button"><i class="fa-solid fa-envelope"></i></a>
     </section>
 </div>
