--- a/views/home.html
+++ b/views/home.html
@@ -12,13 +12,16 @@
 
     <div class="row">
         <div class="col-lg-4 col-md-4 col-sm-12 weather-home weather-1">
-            <p id="text">New York</p>
+            <p id="title-city1">New York</p>
+            <p id="desc-city1"></p>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12 weather-home weather-2">
-            <p>Londres</p>
+            <p id="title-city2">Paris</p>
+            <p id="desc-city2"></p>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12 weather-home weather-3">
-            <p></p>
+            <p id="title-city3">Londres</p>
+            <p id="desc-city3"></p>
         </div>
     </div>
 
