--- a/views/home.html
+++ b/views/home.html
@@ -11,20 +11,26 @@
     <p class="display-4 mt-3 mb-4 title-view-anime">Bienvenue sur météhenchoz&#160;!</p>
 
     <div class="row">
-        <div class="col-lg-4 col-md-4 col-sm-12 weather-home weather-1">
-            <p id="title-city1">New York</p>
+        <div class="col-lg-4 col-md-12 col-sm-12 weather-home weather-1">
+            <div class="weather-title-icon m-2">
+                <p id="title-city1" class="display-4 title-city">New York</p>
+                <img class="icon" id="icon1" alt="icon">
+            </div>
             <p id="desc-city1"></p>
-            <img id="icon1" alt="icon">
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12 weather-home weather-2">
-            <p id="title-city2">Paris</p>
+        <div class="col-lg-4 col-md-12 col-sm-12 weather-home weather-2">
+            <div class="weather-title-icon m-2">
+                <p id="title-city2" class="display-4 title-city">Paris</p>
+                <img class="icon" id="icon2" alt="icon">
+            </div>
             <p id="desc-city2"></p>
-            <img id="icon2" alt="icon">
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12 weather-home weather-3">
-            <p id="title-city3">Londres</p>
+        <div class="col-lg-4 col-md-12 col-sm-12 weather-home weather-3">
+            <div class="weather-title-icon m-2">
+                <p id="title-city3" class="display-4 title-city">Londres</p>
+                <img class="icon" id="icon3" alt="icon">
+            </div>
             <p id="desc-city3"></p>
-            <img id="icon3" alt="icon">
         </div>
     </div>
 
@@ -33,6 +39,6 @@
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio totam officia incidunt ipsum est mollitia
         sit, a dolorum officiis atque molestiae corporis tempore iusto id fuga earum ipsa laboriosam odit.</p>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio totam officia incidunt ipsum est mollitia
-        sit, a dolorum officiis atque molestiae corporis tempore iusto id fuga earum ipsa laboriosam odit.</p>     
+        sit, a dolorum officiis atque molestiae corporis tempore iusto id fuga earum ipsa laboriosam odit.</p>
 
 </div>
