--- a/views/home.html
+++ b/views/home.html
@@ -16,21 +16,27 @@
                 <p id="title-city1" class="display-4 title-city">New York</p>
                 <img class="icon" id="icon1" alt="icon">
             </div>
-            <p id="desc-city1"></p>
+            <div class="div-temperature-city text-left">
+                <p id="temp-city1" class="display-4 temperature-city text-white ms-2 p-2 mb-3"></p>
+            </div>
         </div>
         <div class="col-lg-4 col-md-12 col-sm-12 weather-home weather-2">
             <div class="weather-title-icon m-2">
                 <p id="title-city2" class="display-4 title-city">Paris</p>
                 <img class="icon" id="icon2" alt="icon">
             </div>
-            <p id="desc-city2"></p>
+            <div class="div-temperature-city text-left">
+                <p id="temp-city2" class="display-4 temperature-city text-white ms-2 p-2 mb-3"></p>
+            </div>
         </div>
         <div class="col-lg-4 col-md-12 col-sm-12 weather-home weather-3">
             <div class="weather-title-icon m-2">
                 <p id="title-city3" class="display-4 title-city">Londres</p>
                 <img class="icon" id="icon3" alt="icon">
             </div>
-            <p id="desc-city3"></p>
+            <div class="div-temperature-city text-left">
+                <p id="temp-city3" class="display-4 temperature-city text-white ms-2 p-2 mb-3"></p>
+            </div>
         </div>
     </div>
 
