--- a/css/styles/styles.css
+++ b/css/styles/styles.css
@@ -8,7 +8,7 @@ html{background-color: #fff;}
 
 body {
   margin-bottom: 150px;
-  background-color: rgb(168,199,252);
+  background-color: rgb(168, 199, 252);
 }
 
 /* Imports fonts */
@@ -16,11 +16,11 @@ body {
 
 /* Navbar */
 .navbar {
-  background-color: #fac05e !important;
+  background-color: #fac05e!important;
   border-bottom: 1px solid #000000;
 }
 
-
+/* Cursor pointer on nav links */
 #a-home,
 #a-stations,
 #a-doc,
@@ -55,16 +55,15 @@ footer {
   background-color: #fac05e;
 }
 
-/* Buttons footer */
+/* Buttons footer links animation */
 .btn-footer {transform: scale(1);transition: transform 0.2s ease-in-out;}
-
 .btn-footer:hover {transform: scale(1.3);transition: transform 0.2s ease-in-out;}
 
 
 /* Keyframes animations */
 @keyframes fromLeftWithBlur {
   0% {
-    transform: translateX(-50px);
+    transform: translateX(-100px);
     opacity: 0;
   }
   100% {
@@ -87,8 +86,9 @@ footer {
 
 .weather-home {
   height: 310px;
-  border: 1px solid white;    
+  border: 1px solid black;    
   position: relative;
+  border-radius: 15px;
 }
 
 .weather-title-icon {
@@ -121,6 +121,7 @@ footer {
 }
 
 .temperature-city {
+  -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
   border-radius: 20px;
 }
