--- a/views/home.html
+++ b/views/home.html
@@ -8,9 +8,9 @@
 
 <div class="container">
 
-    <p class="display-4 mt-3 mb-4 title-view-anime">Bienvenue sur météhenchoz&#160;!</p>
+    <p class="display-3 mt-3 mb-4 title-view-anime">Bienvenue sur météhenchoz&#160;!</p>
 
-    <div class="row">
+    <div class="row mb-5">
         <div class="col-lg-4 col-md-12 col-sm-12 weather-home weather-1">
             <div class="weather-title-icon m-2">
                 <p id="title-city1" class="display-4 title-city">New York</p>
