--- a/views/home.html
+++ b/views/home.html
@@ -10,41 +10,41 @@
 
     <p class="display-3 mt-3 mb-4 title-view-anime">Bienvenue sur météhenchoz&#160;!</p>
 
-    <div class="row mb-5">
-        <div class="col-lg-4 col-md-12 col-sm-12 weather-home weather-1">
+    <div class="row mb-4">
+        <div class="col-lg-4 col-md-12 col-sm-12 weather-home weather-1 position-relative">
             <div class="weather-title-icon m-2">
                 <p id="title-city1" class="display-4 title-city">New York</p>
                 <img class="icon" id="icon1" alt="icon">
             </div>
-            <div class="div-temperature-city text-left">
+            <div class="div-temperature-city text-left bottom-0">
                 <p id="temp-city1" class="display-4 temperature-city text-white ms-2 p-2 mb-3"></p>
             </div>
         </div>
-        <div class="col-lg-4 col-md-12 col-sm-12 weather-home weather-2">
+        <div class="col-lg-4 col-md-12 col-sm-12 weather-home weather-2 position-relative">
             <div class="weather-title-icon m-2">
                 <p id="title-city2" class="display-4 title-city">Paris</p>
                 <img class="icon" id="icon2" alt="icon">
             </div>
-            <div class="div-temperature-city text-left">
+            <div class="div-temperature-city text-left bottom-0">
                 <p id="temp-city2" class="display-4 temperature-city text-white ms-2 p-2 mb-3"></p>
             </div>
         </div>
-        <div class="col-lg-4 col-md-12 col-sm-12 weather-home weather-3">
+        <div class="col-lg-4 col-md-12 col-sm-12 weather-home weather-3 position-relative">
             <div class="weather-title-icon m-2">
                 <p id="title-city3" class="display-4 title-city">Londres</p>
                 <img class="icon" id="icon3" alt="icon">
             </div>
-            <div class="div-temperature-city text-left">
+            <div class="div-temperature-city text-left bottom-0">
                 <p id="temp-city3" class="display-4 temperature-city text-white ms-2 p-2 mb-3"></p>
             </div>
         </div>
     </div>
 
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio totam officia incidunt ipsum est mollitia
-        sit, a dolorum officiis atque molestiae corporis tempore iusto id fuga earum ipsa laboriosam odit.</p>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio totam officia incidunt ipsum est mollitia
-        sit, a dolorum officiis atque molestiae corporis tempore iusto id fuga earum ipsa laboriosam odit.</p>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio totam officia incidunt ipsum est mollitia
-        sit, a dolorum officiis atque molestiae corporis tempore iusto id fuga earum ipsa laboriosam odit.</p>
+    <p class="display-4 subtitle">Bienvenue !</p>
+    <p class="text-home">Vous trouverez sur ce site la météo de vos villes préférées !</p>
+    <p class="text-home">Ci-dessus, la température et la météo actuelle est affichée pour la ville de New York, Paris et
+        Londres.</p>
+    <p class="text-home">Si vous désirez ajouter vos propres stations météo, merci de vous référer à la page <span
+            id="link-stations-text-home" class="link-stations-text-home">Stations</span>.</p>
 
 </div>
