--- a/views/home.html
+++ b/views/home.html
@@ -41,10 +41,11 @@
     </div>
 
     <p class="display-4 subtitle">Bienvenue !</p>
-    <p class="text-home">Vous trouverez sur ce site la météo de vos villes préférées !</p>
+    <p class="text-home">Vous trouverez sur ce site la météo de vos villes préférées&#160;!</p>
     <p class="text-home">Ci-dessus, la température et la météo actuelle est affichée pour la ville de New York, Paris et
         Londres.</p>
     <p class="text-home">Si vous désirez ajouter vos propres stations météo, merci de vous référer à la page <span
-            id="link-stations-text-home" class="link-stations-text-home">Stations</span>.</p>
+            id="link-stations-text-home" class="link">Stations</span>.</p>
+    <p class="text-home">Les données météo sont fournies par <a href="https://www.weatherapi.com/" target="_blank" class="link text-decoration-none">weatherapi.com</a>.</p>
 
 </div>
