--- a/views/about.html
+++ b/views/about.html
@@ -7,7 +7,7 @@
 <!DOCTYPE html>
 
 <div class="container mt-3">
-    <p class="h1 mb-3">À propos</p>
+    <p class="h1 mb-3">About</p>
 
     <p>Text here</p>
 </div>
