--- a/views/home.html
+++ b/views/home.html
@@ -8,7 +8,7 @@
 
 <div class="container">
 
-    <p class="display-3 mt-3 mb-4 title-view-anime">Bienvenue sur météhenchoz&#160;!</p>
+    <p class="display-3 mt-3 mb-4 title-view-anime">Welcome on météhenchoz&#160;!</p>
 
     <div class="row mb-4">
         <div class="col-lg-4 col-md-12 col-sm-12 weather-home weather-1 position-relative">
@@ -31,7 +31,7 @@
         </div>
         <div class="col-lg-4 col-md-12 col-sm-12 weather-home weather-3 position-relative">
             <div class="weather-title-icon m-2">
-                <p id="title-city3" class="display-4 title-city">Londres</p>
+                <p id="title-city3" class="display-4 title-city">London</p>
                 <img class="icon" id="icon3" alt="icon">
             </div>
             <div class="div-temperature-city text-left bottom-0">
@@ -40,12 +40,11 @@
         </div>
     </div>
 
-    <p class="display-4 subtitle">Bienvenue !</p>
-    <p class="text-home">Vous trouverez sur ce site la météo de vos villes préférées&#160;!</p>
-    <p class="text-home">Ci-dessus, la température et la météo actuelle est affichée pour la ville de New York, Paris et
-        Londres.</p>
-    <p class="text-home">Si vous désirez ajouter vos propres stations météo, merci de vous référer à la page <span
-            id="link-stations-text-home" class="link">Stations</span>.</p>
-    <p class="text-home">Les données météo sont fournies par <a href="https://www.weatherapi.com/" target="_blank" class="link text-decoration-none">weatherapi.com</a>.</p>
+    <p class="display-4 subtitle">Welcome!</p>
+    <p class="text-home">On this site you will find the weather of your favourite cities!</p>
+    <p class="text-home">Above, the current temperature, time and weather is displayed for New York City, Paris and London.</p>
+    <p class="text-home">If you want to add your own weather stations, please refer to the <span
+        id="link-stations-text-home" class="link">stations</span> page.</p>
+    <p class="text-home">Weather data is provided by <a href="https://www.weatherapi.com/" target="_blank" class="link text-decoration-none">weatherapi.com</a>.</p>
 
 </div>
