--- a/views/home.html
+++ b/views/home.html
@@ -40,11 +40,12 @@
         </div>
     </div>
 
-    <p class="display-4 subtitle">Welcome!</p>
+    <p class="display-4 subtitle">Welcome!</p><br>
     <p class="text-home">On this site you will find the weather of your favourite cities!</p>
     <p class="text-home">Above, the current temperature, time and weather is displayed for New York City, Paris and London.</p>
     <p class="text-home">If you want to add your own weather stations, please refer to the <span
         id="link-stations-text-home" class="link">stations</span> page.</p>
     <p class="text-home">Weather data is provided by <a href="https://www.weatherapi.com/" target="_blank" class="link text-decoration-none">weatherapi.com</a>.</p>
+    <p class="text-home" style="padding-bottom: 120px;">This website was created by Noé Henchoz as part of a development module at the EMF. It uses HTML, CSS and JavaScript.</p>
 
 </div>
