--- a/views/stations.html
+++ b/views/stations.html
@@ -6,3 +6,16 @@
 
 <!DOCTYPE html>
 
+<div class="container">
+   <div class="row">
+      <div class="col-lg-4 col-sm-12">
+         text
+      </div>
+      <div class="col-lg-4 col-sm-12">
+         text
+      </div>
+      <div class="col-lg-4 col-sm-12">
+         text
+      </div>
+   </div>
+</div>
